--- a/core/templates/core/template_form.html
+++ b/core/templates/core/template_form.html
@@ -18,7 +18,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div>
                             <label for="{{ form.TemplateName.id_for_label }}" class="block text-sm font-medium text-gray-700">
-                                {{ form.TemplateName.label }} <span class="text-red-500">*</span>
+                                ЗАГВАРЫН НЭР <span class="text-red-500">*</span>
                             </label>
                             <div class="mt-1">
                                 {{ form.TemplateName }}
@@ -34,7 +34,7 @@
                         </div>
                         <div>
                             <label for="{{ form.DocumentTypeId.id_for_label }}" class="block text-sm font-medium text-gray-700">
-                                {{ form.DocumentTypeId.label }} <span class="text-red-500">*</span>
+                                БАРИМТЫН ТӨРӨЛ <span class="text-red-500">*</span>
                             </label>
                             <div class="mt-1">
                                 {{ form.DocumentTypeId }}
@@ -52,7 +52,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div>
                             <label for="{{ form.AccountId.id_for_label }}" class="block text-sm font-medium text-gray-700">
-                                {{ form.AccountId.label }} <span class="text-red-500">*</span>
+                                ДАНС <span class="text-red-500">*</span>
                             </label>
                             <div class="mt-1">
                                 {{ form.AccountId }}
